<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="320dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/building_blank"
        android:textColor="@color/bsu"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_create_route" />

    <Button
        android:id="@+id/btn_see_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/button_bg"
        android:text="@string/btn_see_details"
        android:textSize="12sp"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:width="100dp"
        android:height="50dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/btn_create_route"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_create_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/button_bg"
        android:text="@string/btn_route"
        android:textSize="12sp"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:width="100dp"
        android:height="50dp"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@id/btn_see_details"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/btn_see_3d_model"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_see_3d_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/button_bg"
        android:text="@string/btn_3d_model"
        android:textSize="12sp"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:width="100dp"
        android:height="50dp"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@id/btn_create_route"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>